# monad-workspace

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  monad.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: adr-candidate.yml  bug.yml  bug_report.md  config.yml  epic.yml  feature_request.md  research.yml  task.yml  work-packet.yml
.github/workflows/: build-binary.yml
.monad/: README.md
.monad/context/: 2026-05-23-session-001.md  README.md  current-state.md  decision-log.md  latest-context-pack.md  latest-handoff.md
.monad/reports/: README.md  latest-check-evidence.md
crates/monad-cli/: Cargo.toml
crates/monad-core/: Cargo.toml
crates/monad-mcp/: Cargo.toml
docs/: README.md
docs/00-meta/: DOCUMENTATION-MAP.md  DOCUMENTATION-STANDARD.md  FRONTMATTER-STANDARD.md  GLOSSARY.md  IDEA.md  NAMING-STANDARD.md  README.md  STATUS-STANDARD.md
docs/01-project/: README.md
docs/02-product/: COMPETITIVE-LANDSCAPE.md  MVP-SCOPE.md  NON-GOALS.md  POSITIONING.md  PROBLEM-STATEMENT.md  README.md  SUCCESS-METRICS.md  TARGET-USERS.md  USE-CASES.md  USER-JOURNEYS.md  USER-PERSONAS.md  VALUE-PROPOSITION.md
docs/03-requirements/: ACCEPTANCE-CRITERIA-STANDARD.md  FUNCTIONAL-REQUIREMENTS.md  FUTURE-REQUIREMENTS.md  MVP-REQUIREMENTS.md  NONFUNCTIONAL-REQUIREMENTS.md  README.md  REQUIREMENTS-TRACEABILITY-MATRIX.md  SYSTEM-QUALITIES.md
docs/04-domain/: BOUNDED-CONTEXTS.md  CONCEPTUAL-MODEL.md  DOMAIN-EVENTS.md  DOMAIN-INVARIANTS.md  DOMAIN-MODEL.md  README.md  (+1 more)
work/: README.md
(+617 files in other folders)
